Project finished, favourites lamentable

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-intro",
+  "name": "react-cinema",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,6 +17,7 @@
     ]
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
